fixed focus pixel circle misaligning with click event

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,10 @@ body:not(modal-open) .heatmap:hover {
 	cursor: crosshair;
 }
 
+.no-padding {
+	padding: 0;
+}
+
 .overlay {
 	position: absolute;
 	top: 0;
